Prepared training data for LSTM by creating sequences, reshaped data for 3D input, built and compiled a sequential LSTM model, and trained it with scaled stock data

--- a/stock_price_prediction.ipynb
+++ b/stock_price_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0352o06vvKYuyKGYlDfMf",
+      "authorship_tag": "ABX9TyPoSalJ570TBFzwIJgJpVXJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -568,7 +568,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443
+          "height": 574
         },
         "id": "_2lk6rmimdMi",
         "outputId": "7118bcef-46c3-4490-dbfa-d087aec818db"
@@ -665,12 +665,186 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create the training data set\n",
+        "\n",
+        "# Create the scaled training data set\n",
+        "train_data = scaled_data[0:training_data_len, :]\n",
+        "\n",
+        "# Split the data into x_train and y_train data sets\n",
+        "x_train = []\n",
+        "y_train = []\n",
+        "\n",
+        "for i in range(60, len(train_data)):\n",
+        "    x_train.append(train_data[i - 60:i, 0])\n",
+        "    y_train.append(train_data[i, 0])\n",
+        "\n",
+        "    if i <= 61:\n",
+        "      print(x_train)\n",
+        "      print(y_train)\n",
+        "      print()"
+      ],
       "metadata": {
-        "id": "E9Iiiy4Y7tdu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E9Iiiy4Y7tdu",
+        "outputId": "d2eee998-f107-4e4a-e5de-0f8c2dc7fb0e"
       },
-      "execution_count": null,
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[array([0.        , 0.00099482, 0.00759   , 0.01199435, 0.01225794,\n",
+            "       0.01196883, 0.01285312, 0.01699671, 0.01798868, 0.01588571,\n",
+            "       0.01525085, 0.01569298, 0.01549176, 0.01819843, 0.01949082,\n",
+            "       0.02348137, 0.02422677, 0.02326882, 0.02174118, 0.01978557,\n",
+            "       0.02229951, 0.02445351, 0.01602174, 0.0152962 , 0.01667362,\n",
+            "       0.01871708, 0.01918473, 0.02091359, 0.02348421, 0.02344453,\n",
+            "       0.0252329 , 0.02564104, 0.02590463, 0.02912709, 0.02889185,\n",
+            "       0.02792257, 0.0259528 , 0.02691642, 0.02589611, 0.02817481,\n",
+            "       0.02699294, 0.02726786, 0.02634109, 0.02617386, 0.02744359,\n",
+            "       0.02815215, 0.0279991 , 0.02860277, 0.02801892, 0.02814363,\n",
+            "       0.02827118, 0.02795658, 0.02927731, 0.02537462, 0.02675204,\n",
+            "       0.02655931, 0.02605765, 0.0264006 , 0.02900239, 0.03419465])]\n",
+            "[0.03476717139139243]\n",
+            "\n",
+            "[array([0.        , 0.00099482, 0.00759   , 0.01199435, 0.01225794,\n",
+            "       0.01196883, 0.01285312, 0.01699671, 0.01798868, 0.01588571,\n",
+            "       0.01525085, 0.01569298, 0.01549176, 0.01819843, 0.01949082,\n",
+            "       0.02348137, 0.02422677, 0.02326882, 0.02174118, 0.01978557,\n",
+            "       0.02229951, 0.02445351, 0.01602174, 0.0152962 , 0.01667362,\n",
+            "       0.01871708, 0.01918473, 0.02091359, 0.02348421, 0.02344453,\n",
+            "       0.0252329 , 0.02564104, 0.02590463, 0.02912709, 0.02889185,\n",
+            "       0.02792257, 0.0259528 , 0.02691642, 0.02589611, 0.02817481,\n",
+            "       0.02699294, 0.02726786, 0.02634109, 0.02617386, 0.02744359,\n",
+            "       0.02815215, 0.0279991 , 0.02860277, 0.02801892, 0.02814363,\n",
+            "       0.02827118, 0.02795658, 0.02927731, 0.02537462, 0.02675204,\n",
+            "       0.02655931, 0.02605765, 0.0264006 , 0.02900239, 0.03419465]), array([0.00099482, 0.00759   , 0.01199435, 0.01225794, 0.01196883,\n",
+            "       0.01285312, 0.01699671, 0.01798868, 0.01588571, 0.01525085,\n",
+            "       0.01569298, 0.01549176, 0.01819843, 0.01949082, 0.02348137,\n",
+            "       0.02422677, 0.02326882, 0.02174118, 0.01978557, 0.02229951,\n",
+            "       0.02445351, 0.01602174, 0.0152962 , 0.01667362, 0.01871708,\n",
+            "       0.01918473, 0.02091359, 0.02348421, 0.02344453, 0.0252329 ,\n",
+            "       0.02564104, 0.02590463, 0.02912709, 0.02889185, 0.02792257,\n",
+            "       0.0259528 , 0.02691642, 0.02589611, 0.02817481, 0.02699294,\n",
+            "       0.02726786, 0.02634109, 0.02617386, 0.02744359, 0.02815215,\n",
+            "       0.0279991 , 0.02860277, 0.02801892, 0.02814363, 0.02827118,\n",
+            "       0.02795658, 0.02927731, 0.02537462, 0.02675204, 0.02655931,\n",
+            "       0.02605765, 0.0264006 , 0.02900239, 0.03419465, 0.03476717])]\n",
+            "[0.03476717139139243, 0.03765804780722029]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert the x_train and y_train to NumPy arrays\n",
+        "x_train, y_train = np.array(x_train), np.array(y_train)"
+      ],
+      "metadata": {
+        "id": "x6rYhm8_CSzD"
+      },
+      "execution_count": 162,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Reshape the Data b/c a LSTM model expects the data to be in 3-Dimensions\n",
+        "\n",
+        "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\n",
+        "x_train.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0gu9ieEnChXy",
+        "outputId": "325c860a-3753-4fb0-af7b-7e277a3c573f"
+      },
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1527, 60, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Build the LSTM Model\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(LSTM(50, return_sequences=True, input_shape=(x_train.shape[1], 1)))\n",
+        "model.add(LSTM(50, return_sequences=False))\n",
+        "model.add(Dense(25))\n",
+        "model.add(Dense(1))"
+      ],
+      "metadata": {
+        "id": "vVJ26o8zDzNb"
+      },
+      "execution_count": 158,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compile the model\n",
+        "\n",
+        "model.compile(optimizer='adam', loss='mean_squared_error')"
+      ],
+      "metadata": {
+        "id": "0OHo4plJETrJ"
+      },
+      "execution_count": 159,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train the model\n",
+        "\n",
+        "model.fit(x_train, y_train, batch_size=1, epochs=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YDgtBsmtEdA0",
+        "outputId": "4e0d5789-9c59-4b88-cc39-24f014922b39"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1527/1527\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 24ms/step - loss: 0.0037\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x78a4217d8ac0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
     }
   ]
 }
