Added functionality to predict Amazon's stock price for 2024-01-16 using the last 60 days of data and dynamically handle the 'Close' column. Included logic to fetch and verify the actual stock price for the target date

--- a/stock_price_prediction.ipynb
+++ b/stock_price_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZPnrBWKwC7pVo4Cs8sixE",
+      "authorship_tag": "ABX9TyPyVC47b4V17ysCBXqREjTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -568,7 +568,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 768
+          "height": 443
         },
         "id": "_2lk6rmimdMi",
         "outputId": "7118bcef-46c3-4490-dbfa-d087aec818db"
@@ -940,9 +940,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yu7m_ZA-Nsyw",
-        "outputId": "7204ea76-8d27-4629-beb3-c3e6d630ad5d"
+        "outputId": "5dd634d4-3db4-4b87-d8f3-8aad64b8e9b6"
       },
-      "execution_count": 184,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,7 +952,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 184
+          "execution_count": 202
         }
       ]
     },
@@ -966,9 +966,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UuFTTv4USRnv",
-        "outputId": "ae477c6e-530c-4980-8884-3b5ee9ffd05c"
+        "outputId": "2bf16eec-6805-433b-e50b-3a23a592b68d"
       },
-      "execution_count": 191,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 191
+          "execution_count": 203
         }
       ]
     },
@@ -1019,12 +1019,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 768
+          "height": 443
         },
         "id": "tKVcpgAGQmOY",
-        "outputId": "fe2625bb-cbde-4435-bc94-d73a894deb95"
+        "outputId": "28972429-d63d-4cf7-dd6a-d9f1cc342c99"
       },
-      "execution_count": 194,
+      "execution_count": 212,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1050,9 +1050,9 @@
           "height": 455
         },
         "id": "7nxBBlaOTTs5",
-        "outputId": "6f4775fd-5134-4c36-d8f6-5d17930703e1"
+        "outputId": "7de75d52-6882-4343-c36e-5c1499be9a3e"
       },
-      "execution_count": 195,
+      "execution_count": 213,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-82dde33b-1a92-4be0-bd97-8f64b5fc84e8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-53ca021c-6119-47df-af9e-ae332e086d86\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1167,7 +1167,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82dde33b-1a92-4be0-bd97-8f64b5fc84e8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-53ca021c-6119-47df-af9e-ae332e086d86')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1219,12 +1219,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-82dde33b-1a92-4be0-bd97-8f64b5fc84e8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-53ca021c-6119-47df-af9e-ae332e086d86 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-82dde33b-1a92-4be0-bd97-8f64b5fc84e8');\n",
+              "        const element = document.querySelector('#df-53ca021c-6119-47df-af9e-ae332e086d86');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1244,8 +1244,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6e85803a-2acd-4f44-a172-e5e40f76874d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6e85803a-2acd-4f44-a172-e5e40f76874d')\"\n",
+              "<div id=\"df-490143a6-d181-4cda-8949-048294e39ce6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-490143a6-d181-4cda-8949-048294e39ce6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1364,14 +1364,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6e85803a-2acd-4f44-a172-e5e40f76874d button');\n",
+              "        document.querySelector('#df-490143a6-d181-4cda-8949-048294e39ce6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_c672e958-14f8-4665-a627-f6b16daafce5\">\n",
+              "  <div id=\"id_535583f5-c978-4627-bb90-f75593b9401a\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1415,7 +1415,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c672e958-14f8-4665-a627-f6b16daafce5 button.colab-df-generate');\n",
+              "        document.querySelector('#id_535583f5-c978-4627-bb90-f75593b9401a button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1436,18 +1436,155 @@
             }
           },
           "metadata": {},
-          "execution_count": 195
+          "execution_count": 213
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Predicting price of 2024-01-16\n",
+        "\n",
+        "# Get the Quote\n",
+        "amazon_quote = yf.download('AMZN', start='2012-01-01', end='2024-01-16')\n",
+        "\n",
+        "# Dynamically filter the column containing 'Close'\n",
+        "close_column = [col for col in amazon_quote.columns if 'Close' in col]\n",
+        "if not close_column:\n",
+        "    raise KeyError(\"No column matching 'Close' found in the data.\")\n",
+        "\n",
+        "# Select the first match for 'Close'\n",
+        "new_df = amazon_quote[[close_column[0]]]\n",
+        "new_df.columns = ['Close']  # Rename for consistency\n",
+        "\n",
+        "# Get the last 60 days close price values and convert the DataFrame to an array\n",
+        "last_60_days = new_df[-60:].values\n",
+        "\n",
+        "# Check if we have enough data for the last 60 days\n",
+        "if last_60_days.shape[0] < 60:\n",
+        "    raise ValueError(f\"Not enough data for the last 60 days. Found only {last_60_days.shape[0]} rows.\")\n",
+        "\n",
+        "# Create a dummy array to match the scaler's expected shape\n",
+        "dummy_array = np.zeros((last_60_days.shape[0], scaler.n_features_in_))\n",
+        "dummy_array[:, 0] = last_60_days[:, 0]  # Insert 'Close' data into the first column\n",
+        "\n",
+        "# Scale the data\n",
+        "last_60_days_scaled = scaler.transform(dummy_array)\n",
+        "last_60_days_scaled = last_60_days_scaled[:, 0:1]  # Extract only the scaled 'Close' column\n",
+        "\n",
+        "# Create an empty list\n",
+        "X_test = []\n",
+        "\n",
+        "# Append the past 60 days\n",
+        "X_test.append(last_60_days_scaled)\n",
+        "\n",
+        "# Convert the X_test data set to a NumPy array\n",
+        "X_test = np.array(X_test)\n",
+        "\n",
+        "# Reshape the data\n",
+        "X_test = np.reshape(X_test, (X_test.shape[0], X_test.shape[1], 1))\n",
+        "\n",
+        "# Get the predicted scaled price\n",
+        "pred_price = model.predict(X_test)\n",
+        "\n",
+        "# Undo the scaling\n",
+        "dummy_array_pred = np.zeros((pred_price.shape[0], scaler.n_features_in_))\n",
+        "dummy_array_pred[:, 0] = pred_price[:, 0]  # Insert predictions into the first column\n",
+        "pred_price = scaler.inverse_transform(dummy_array_pred)\n",
+        "pred_price = pred_price[:, 0]  # Extract only the 'Close' predictions\n",
+        "\n",
+        "print(pred_price)"
+      ],
       "metadata": {
-        "id": "X3aYZ-rjTkat"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X3aYZ-rjTkat",
+        "outputId": "99be6f00-6238-41e3-8365-5bae936a877a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 283,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 23ms/step\n",
+            "[159.87837497]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the stock quote for 2024-01-16\n",
+        "\n",
+        "# Define ticker and date range\n",
+        "ticker = 'AMZN'\n",
+        "start_date = '2024-01-16'\n",
+        "end_date = '2024-01-17'\n",
+        "\n",
+        "# Fetch data\n",
+        "amazon_quote = yf.download(ticker, start=start_date, end=end_date)\n",
+        "\n",
+        "# Check if data is available\n",
+        "if amazon_quote.empty:\n",
+        "    print(f\"No data found for {ticker} between {start_date} and {end_date}.\")\n",
+        "else:\n",
+        "    # Extract 'Close' price for the target date if available\n",
+        "    if '2024-01-16' in amazon_quote.index:\n",
+        "        print(f\"Close price for {ticker} on 2024-01-16: {amazon_quote.loc['2024-01-16', 'Close']}\")\n",
+        "    else:\n",
+        "        print(f\"No data found for {ticker} on 2024-01-16. Available data:\")\n",
+        "        print(amazon_quote)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XtSKV3eMagBR",
+        "outputId": "28d39308-21a0-4a72-fd41-9e9933fc6b05"
+      },
+      "execution_count": 286,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Close price for AMZN on 2024-01-16: Ticker\n",
+            "AMZN    153.160004\n",
+            "Name: 2024-01-16 00:00:00+00:00, dtype: float64\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
